        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.4-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : enhancement
Bugzilla   : 14482
Description: Add rhel5 support to HEAD.

Severity   : normal
Bugzilla   : 12228
Description: LBUG in ptlrpc_check_set() bad phase ebc0de00
Details    : access to bitfield in structure is always rounded to long 
             and this produce problem with not atomic change any bit.

Severity   : normal
Bugzilla   : 13647
Description: Lustre make rpms failed.
Details    : Remove ldiskfs spec file to avoids rpmbuild be confused when
             builds Lustre rpms from tarball.

Severity   : normal
Frequency  : rare on shutdown ost
Bugzilla   : 14608
Description: If llog cancel was not send before clean_exports phase, this can
             produce deadlock in llog code.
Details    : If llog thread has last reference to obd and call class_import_put
             this produce deadlock because llog_cleanup_commit_master wait when
	     last llog_commit_thread exited, but this never success because was 
	     called from llog_commit_thread.

Severity   : normal
Bugzilla   : 9977
Description: allow userland application know is lost one of stripes.
Details    : fill lvb_blocks with error code on ost and return it to
             application if error flag found.

Severity   : normal
Bugzilla   : 14607
Description: NULL lov_tgts causing MDS oops
Details    : more safe checks for NULL lov_tgts for avoid oops.

Severity   : enhancement
Bugzilla   : 14531
Description: Update to RHEL4 latest kernel-2.6.9-67.0.1.EL.

Severity   : normal
Bugzilla   : 13375
Descriptoin: make lov_create() will not stuck in obd_statfs_rqset()